Import of ETHER/Plack-App-BeanstalkConsole-0.002 from CPAN.
gitpan-cpan-distribution: Plack-App-BeanstalkConsole
gitpan-cpan-version:      0.002
gitpan-cpan-path:         ETHER/Plack-App-BeanstalkConsole-0.002.tar.gz
gitpan-cpan-author:       ETHER
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -11,6 +11,7 @@ url = https://github.com/downloads/ptrofimov/beanstalk_console/beanstalk_console
 
 [@Author::ETHER]
 :version = 0.006
+-remove = MakeMaker
 
 [NoAutomatedTesting]
 
