--- a/META.yml
+++ b/META.yml
@@ -32,7 +32,7 @@ no_index:
 provides:
   Plack::App::BeanstalkConsole:
     file: lib/Plack/App/BeanstalkConsole.pm
-    version: 0.002
+    version: 0.003
 requires:
   File::ShareDir: 0
   Plack::App::PHPCGIFile: 0
@@ -45,7 +45,7 @@ resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Plack-App-BeanstalkConsole
   homepage: https://github.com/karenetheridge/Plack-App-BeanstalkConsole
   repository: https://github.com/karenetheridge/Plack-App-BeanstalkConsole.git
-version: 0.002
+version: 0.003
 x_Dist_Zilla:
   perl:
     version: 5.019000
@@ -278,6 +278,10 @@ x_Dist_Zilla:
       class: Dist::Zilla::Plugin::NoAutomatedTesting
       name: NoAutomatedTesting
       version: 0.06
+    -
+      class: Dist::Zilla::Plugin::Test::Kwalitee
+      name: Test::Kwalitee
+      version: 2.03
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
