--- a/dist.ini
+++ b/dist.ini
@@ -15,6 +15,6 @@ url = https://github.com/downloads/ptrofimov/beanstalk_console/beanstalk_console
 
 [NoAutomatedTesting]
 
-;[Test::Kwalitee]
+[Test::Kwalitee]
 ;[Test::Kwalitee::Extra]
 
