--- a/dist.ini
+++ b/dist.ini
@@ -10,8 +10,11 @@ license             = Perl_5
 url = https://github.com/downloads/ptrofimov/beanstalk_console/beanstalk_console.zip
 
 [@Author::ETHER]
-:version = 0.006
--remove = MakeMaker
+:version = 0.007
+installer = none
+
+[=inc::RequireExecutable]
+executable = php-cgi
 
 [NoAutomatedTesting]
 
