--- a/dist.ini
+++ b/dist.ini
@@ -4,20 +4,26 @@ copyright_holder    = Karen Etheridge
 copyright_year      = 2013
 license             = Perl_5
 
+
+[@Author::ETHER]
+:version = 0.025
+installer = ModuleBuildTiny ; we add our own Makefile.PL, and munge this Build.PL
+Prereqs::AuthorDeps.exclude[0] = inc::DownloadShareDirContent
+Prereqs::AuthorDeps.exclude[1] = inc::RequireExecutable
+
 ; comment this out if doing a lot of release-time testing that does not
 ; require running the application, so we don't hammer github
 [=inc::DownloadShareDirContent]
 url = https://github.com/downloads/ptrofimov/beanstalk_console/beanstalk_console.zip
-
-[@Author::ETHER]
-:version = 0.007
-installer = none
 
 [=inc::RequireExecutable]
 executable = php-cgi
 
 [NoAutomatedTesting]
 
-[Test::Kwalitee]
-;[Test::Kwalitee::Extra]
+[Prereqs / DevelopRequires]
+Test::CleanNamespaces = 0
+Test::File::ShareDir = 0
 
+; authordep Dist::Zilla::Plugin::MakeMaker::Awesome = 0.14
+; authordep File::Basename = 0
